# SkypeExport

src/SkypeExport/: main.cpp  main_qt.cpp
src/SkypeExport/_gccbuild/linux/: CMakeLists.txt  README.md
src/SkypeExport/model/: skypeparser.h  skypeparser_parsing.cpp  skypeparser_utils.cpp
src/SkypeExport/resources/ui/: skype_export.ui  skype_export_window.cpp  skype_export_window.h
src/SkypeExport/view/: skype_export_window.cpp  skype_export_window.h
